--- a/HTML/home.html
+++ b/HTML/home.html
@@ -25,8 +25,8 @@
             <div id="item11"><a href=""> Quedas </a></div>
             <div id="item12"><a href=""> Dores Crônicas </a></div>
             <div id="item13"><a href=""> Hábitos de Vida </a></div>
-            <div id="item14"><a href=""> Pressão Arterial </a></div>
-            <div id="item15"> <a href="">Controlar Glicemia </a></div>
+            <div id="item14"><a href="../HTML/cntrlPressaoArterial.html"> Pressão Arterial </a></div>
+            <div id="item15"> <a href="../HTML/cntrlGlicemia.html">Controlar Glicemia </a></div>
             <div id="item16"><a href=""> Vacinação </a></div>
             <div id="item17"><a href=""> Saúde Bucal </a></div>
             <div id="item18"><a href=""> Agenda de Consulta e Exames </a></div>
