--- a/HTML/cadastroVES.html
+++ b/HTML/cadastroVES.html
@@ -206,39 +206,39 @@
                         <fieldset class="outroField">
                             <h5><strong>Por causa de sua saúde ou condição física, você deixo de fazer compras?</strong></h5>
                             <fieldset class="outroField">
-                                <label>SIM</label>
-                                <input type="radio" name="pergum" value="sim"><br>
-                                <label>Não ou não faz compras por outros motivos que não a saúde.</label>
-                                <input type="radio" name="pergum" value="nao">
+                                <label for="pergumsim">SIM</label>
+                                <input type="radio" id="pergumsim" name="pergum" value="sim"><br>
+                                <label for="pergumnao">Não ou não faz compras por outros motivos que não a saúde.</label>
+                                <input type="radio" id="pergumnao" name="pergum" value="nao">
                             </fieldset>
                             <h5><strong>Por causa de sua saúde ou condição física, você deixo de controlar seu<br>dinheiro, seus gastos ou pagar contas?</strong></h5>
                             <fieldset class="outroField">
-                                <label>SIM</label>
-                                <input type="radio" name="pergdois" value="sim"><br>
-                                <label>Não ou não controla o dinheiro por outros motivos que não a saúde.</label>
-                                <input type="radio" name="pergdois" value="nao">
+                                <label for="pergdoisim">SIM</label>
+                                <input type="radio" id="pergdoisim" name="pergdois" value="sim"><br>
+                                <label for="pergdoisnao">Não ou não controla o dinheiro por outros motivos que não a saúde.</label>
+                                <input type="radio" id="pergdoisnao" name="pergdois" value="nao">
                             </fieldset>
                             <h5><strong>Por causa de sua saúde ou condição física, você deixo de caminhar<br>dentro de casa?</strong></h5>
                             <fieldset class="outroField">
-                                <label>SIM</label>
-                                <input type="radio" name="pergtre" value="sim"><br>
-                                <label>Não ou não caminha dentro de casa por outros motivos que não a saúde.</label>
-                                <input type="radio" name="pergtre" value="nao">
+                                <label for="pergtresim">SIM</label>
+                                <input type="radio" id="pergtresim" name="pergtre" value="sim"><br>
+                                <label for="pergtrenao">Não ou não caminha dentro de casa por outros motivos que não a saúde.</label>
+                                <input type="radio" id="pergtrenao" name="pergtre" value="nao">
                             </fieldset>
                             <h5><strong>Por causa de sua saúde ou condição física, você deixo de realizar tarefas<br>
                             domésticas leves, como lava louça ou fazer limpeza leve?</strong></h3>
                             <fieldset class="outroField">
-                                <label>SIM</label>
-                                <input type="radio" name="pergqua" value="sim"><br>
-                                <label>Não ou não realiza tarefas domésticas leves por outros motivos que não a saúde.</label>
-                                <input type="radio" name="pergqua" value="nao">
+                                <label for="pergquasim">SIM</label>
+                                <input type="radio" id="pergquasim" name="pergqua" value="sim"><br>
+                                <label for="pergquanao">Não ou não realiza tarefas domésticas leves por outros motivos que não a saúde.</label>
+                                <input type="radio" id="pergquanao" name="pergqua" value="nao">
                             </fieldset>
                             <h5><strong>Por causa de sua saúde ou condição física, você deixo de tomar banho<br>sozinho(a)?</strong></h5>
                             <fieldset class="outroField">
-                                <label>SIM</label>
-                                <input type="radio" name="pergcin" value="sim"><br>
-                                <label>Não ou não toma banho sozinho(a) por outros motivos que não a saúde.</label>
-                                <input type="radio" name="pergcin" value="nao">
+                                <label for="pergcinsim">SIM</label>
+                                <input type="radio" id="pergcinsim" name="pergcin" value="sim"><br>
+                                <label for="pergcinao">Não ou não toma banho sozinho(a) por outros motivos que não a saúde.</label>
+                                <input type="radio" id="pergcinao" name="pergcin" value="nao">
                             </fieldset>
                         </fieldset>
                     </fieldset>
