--- a/HTML/controlePeso.html
+++ b/HTML/controlePeso.html
@@ -76,14 +76,14 @@
         <div>
             <fieldset>
                 <legend>Controle de Peso</legend>
-                <table>
+                <table width="85%">
                     <thead>
                         <tr>
                             <td><strong>Controle de perda de peso</strong></td>
-                            <th colspan="2">20<input type="number"></th>
-                            <th colspan="2">20<input type="number"></th>
-                            <th colspan="2">20<input type="number"></th>
-                            <th colspan="2">20<input type="number"></th>
+                            <th colspan="2" class="inpuAno">20<input type="number"></th>
+                            <th colspan="2" class="inpuAno">20<input type="number"></th>
+                            <th colspan="2" class="inpuAno">20<input type="number"></th>
+                            <th colspan="2" class="inpuAno">20<input type="number"></th>
                         </tr>
                         <tr>
                             <td></td>
