--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
             <legend>Login Cuidador</legend>
             <input type="text" id="tLoginCuidador" name="tNovoLoginCuidador" placeholder="Informe seu CPF"><br><br>
             <button type="button"><a href=""> Entrar </a></button>
-            <button type="button"><a href=""> Cadastro </a></button>
+            <button type="button"><a href="cadastroCuidador.html"> Cadastro </a></button>
         </fieldset>
     </body>
 
