--- a/HTML/home.html
+++ b/HTML/home.html
@@ -18,12 +18,12 @@
             <div id="item4"><a href=""> Cirurgias </a></div>
             <div id="item5"><a href=""> Alergias </a></div>
             <div id="item6"><a href=""> Antropomêtricos </a></div>
-            <div id="item7"><a href=""> Controle de Peso </a></div>
-            <div id="item8"><a href=""> VES13 </a></div>
+            <div id="item7"><a href="controlePeso.html"> Controle de Peso </a></div>
+            <div id="item8"><a href="cadastroVES.html"> VES13 </a></div>
             <div id="item9"><a href=""> Complementares </a></div>
             <div id="item10"><a href=""> Avaliação Ambiental </a></div>
             <div id="item11"><a href=""> Quedas </a></div>
-            <div id="item12"><a href=""> Dores Crônicas </a></div>
+            <div id="item12"><a href="dorCronica.html"> Dores Crônicas </a></div>
             <div id="item13"><a href=""> Hábitos de Vida </a></div>
             <div id="item14"><a href="../HTML/cntrlPressaoArterial.html"> Pressão Arterial </a></div>
             <div id="item15"> <a href="../HTML/cntrlGlicemia.html">Controlar Glicemia </a></div>
