--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,26 +11,26 @@
         <h1>Bem-Vindo!</h1>
         <h4>Acesse as opções abaixo para prosseguir com os cadastros restantes e mais!</h3>
 
-        <div class="grid-container">
-            <div id="item1"><a href=""> Avaliações </a></div>
-            <div id="item2"><a href=""> Cadastrar Responsavel </a></div>
-            <div id="item3"><a href=""> Diagnosticos </a></div>
-            <div id="item4"><a href=""> Cirurgias </a></div>
-            <div id="item5"><a href=""> Alergias </a></div>
-            <div id="item6"><a href=""> Antropomêtricos </a></div>
-            <div id="item7"><a href="controlePeso.html"> Controle de Peso </a></div>
-            <div id="item8"><a href="cadastroVES.html"> VES13 </a></div>
-            <div id="item9"><a href=""> Complementares </a></div>
-            <div id="item10"><a href=""> Avaliação Ambiental </a></div>
-            <div id="item11"><a href=""> Quedas </a></div>
-            <div id="item12"><a href="dorCronica.html"> Dores Crônicas </a></div>
-            <div id="item13"><a href=""> Hábitos de Vida </a></div>
-            <div id="item14"><a href="../HTML/cntrlPressaoArterial.html"> Pressão Arterial </a></div>
-            <div id="item15"> <a href="../HTML/cntrlGlicemia.html">Controlar Glicemia </a></div>
-            <div id="item16"><a href=""> Vacinação </a></div>
-            <div id="item17"><a href=""> Saúde Bucal </a></div>
-            <div id="item18"><a href=""> Agenda de Consulta e Exames </a></div>
-            <div id="item19"><a href=""> Historico de Atualizações </a></div>
+       <div class="grid-container">
+            <div class="itemss" id="item1"><a href=""><h4>Avaliações</h4> </a></div>
+            <div class="itemss" id="item2"><a href=""><img class="fotoss" width="300" src="../fotos/responsavel.jpg" alt="responsavel"><h4>Cadastrar Responsavel </h4></a></div>
+            <div class="itemss" id="item3"><a href=""><img class="fotoss" width="300" src="../fotos/diagnostico.jpg" alt="diagnostico"><h4>Diagnosticos</h4></a></div>
+            <div class="itemss" id="item4"><a href=""><img class="fotoss" width="300" src="../fotos/Cirugias.png" alt="cirugias"><h4>Cirurgias</h4> </a></div>
+            <div class="itemss" id="item5"><a href=""><img class="fotoss" width="300" src="../fotos/alergias.png" alt="alergias"><h4>Alergias</h4> </a></div>
+            <div class="itemss" id="item6"><a href=""><h4>Antropomêtricos</h4> </a></div>
+            <div class="itemss" id="item7"><a href="controlePeso.html"><h4>Controle de Peso</h4></a></div>
+            <div class="itemss" id="item8"><a href="cadastroVES.html"><img class="fotoss" width="300" src="../fotos/vulneravel.jpg" alt="vulneravel"><h4>VES13</h4></a></div>
+            <div class="itemss" id="item9"><a href=""><img class="fotoss" width="300" src="../fotos/cognicao.jpg" alt="Cognição"><h4>Complementares</h4></a></div>
+            <div class="itemss" id="item10"><a href=""><h4>Avaliação Ambiental</h4></a></div>
+            <div class="itemss" id="item11"><a href=""><h4>Quedas</h4></a></div>
+            <div class="itemss" id="item12"><a href="dorCronica.html"><img class="fotoss" width="300" src="../fotos/dores.jpg" alt="dores crônicas"><h4>Dores Crônicas</h4></a></div>
+            <div class="itemss" id="item13"><a href=""> <h4>Hábitos de Vida</h4></a></div>
+            <div class="itemss" id="item14"><a href="../HTML/cntrlPressaoArterial.html"><img class="fotoss" width="300" src="../fotos/arterial.jpg" alt="arterial"><h4>Pressão Arterial</h4></a></div>
+            <div class="itemss" id="item15"> <a href="../HTML/cntrlGlicemia.html"><img class="fotoss" width="300" src="../fotos/glicose.png" alt="Glicemia"><h4>Controlar Glicemia</h4></a></div>
+            <div class="itemss" id="item16"><a href=""><img class="fotoss" width="300" src="../fotos/vacina.jpg" alt="vacinas"><h4>Vacinação</h4></a></div>
+            <div class="itemss" id="item17"><a href=""><img class="fotoss" width="300" src="../fotos/dental.jpg" alt="dentes"><h4>Saúde Bucal</h4></a></div>
+            <div class="itemss" id="item18"><a href=""><img class="fotoss" width="300" src="../fotos/agenda2.jpg" alt="Agenda e Consultas"><h4>Agenda de Consulta e Exames</h4> </a></div>
+            <div class="itemss" id="item19"><a href=""><img class="fotoss" width="300" src="../fotos/historico.jpg" alt="historico do pasciente"><h4>Historico de Atualizações</h4></a></div>
         </div>    
 
     </body>
