--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,30 +2,27 @@
 <html lang="pt-BR">
     <head>
         <meta charset = "UTF-8"/>
-        <title>Home</title>
+        <title>Logins</title>
+        <link rel="stylesheet" type="text/css" href="../CSS/estiloHome.css">
     </head>
 
     <body>
-        
-        <fieldset>
+        <fieldset class="field" id="idoso">
             <legend>Login Idoso</legend>
-            <input type="text" id="tLoginIdoso" name="tNovoLogin" placeholder="Informe seu CPF"><br><br>
-
-            <button type="button"><a href="home.html"> Entrar </a></button>
-            <button type="button"><a href="cadIdoso.html"> Cadastro </a></button>
+            <div class="loginss">
+                <input type="text" id="tLoginIdoso" name="tNovoLogin" placeholder="Informe seu CPF"><br><br>
+                <button type="button"><a href="home.html"> Entrar </a></button>
+                <button type="button"><a href="cadIdoso.html"> Cadastro </a></button>
+            </div>
         </fieldset>
         
-        <fieldset>
+        <fieldset class="field" id="cuidador">
             <legend>Login Cuidador</legend>
-            <input type="text" id="tLoginCuidador" name="tNovoLoginCuidador" placeholder="Informe seu CPF"><br><br>
-            <button type="button"><a href=""> Entrar </a></button>
-            <button type="button"><a href="cadastroCuidador.html"> Cadastro </a></button>
+            <div class="loginss">
+                <input type="text" id="tLoginCuidador" name="tNovoLoginCuidador" placeholder="Informe seu CPF"><br><br>
+                <button type="button"><a href=""> Entrar </a></button>
+                <button type="button"><a href="cadastroCuidador.html"> Cadastro </a></button>
+            </div>
         </fieldset>
     </body>
-
-
-
-
-
-
 </html>
