Co-authored-by: filipessilva <filipessilva@users.noreply.github.com>

--- a/HTML/cadastroCuidador.html
+++ b/HTML/cadastroCuidador.html
@@ -5,11 +5,7 @@
         <link rel="stylesheet" type="text/css" href="../CSS/estilocuidador.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     <body>
         <header>
 
