--- a/HTML/habitosVida.html
+++ b/HTML/habitosVida.html
@@ -5,12 +5,8 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../CSS/estiloPeso.css"></link>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     </head>
     <header>
 
@@ -20,16 +16,15 @@
         <table>
             <thead>
                 <tr>
-                    <td><strong>Identificação de hábitos de vida</strong></td>
-                    <td></td>
+                    <td colspan="2" rowspan="2"><strong>Identificação de hábitos de vida</strong></td>
+                    
                     <th colspan="2" class="inpuAno">20<input type="number"></th>
                     <th colspan="2" class="inpuAno">20<input type="number"></th>
                     <th colspan="2" class="inpuAno">20<input type="number"></th>
                     <th colspan="2" class="inpuAno">20<input type="number"></th>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    
                     <th>S</th>
                     <th>N</th>
                     <th>S</th>
