--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset = "UTF-8"/>
         <title>Logins</title>
-        <link rel="stylesheet" type="text/css" href="../CSS/estiloHome.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/estilologin.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     </head>
 
     <body>
