--- a/HTML/cadIdoso.html
+++ b/HTML/cadIdoso.html
@@ -4,6 +4,8 @@
         <meta charset = "UTF-8"/>
         <title>Cadastro</title>
         <link rel="stylesheet" type="text/css" href="../CSS/estiloCadIdoso.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -165,7 +167,7 @@
 
                         <thead>
                             <tr>
-                                <td>Informações Sociofamiliares</td>
+                                <td rowspan="2">Informações Sociofamiliares</td>
                                 <th colspan="2">20<input type="number"></th>
                                 <th colspan="2">20<input type="number"></th>
                                 <th colspan="2">20<input type="number"></th>
@@ -173,7 +175,7 @@
                                 <th colspan="2">20<input type="number"></th>
                             </tr>
                             <tr>
-                                <td></td>
+                                
                                 <th>S</th>
                                 <th>N</th>
                                 <th>S</th>
