--- a/HTML/cntrlGlicemia.html
+++ b/HTML/cntrlGlicemia.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <title>Glicemia</title>
         <link rel="stylesheet" type="text/css" href="../CSS/estiloCntrlGlicemia.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
     </head>
 
 
