--- a/HTML/cadastroCuidador.html
+++ b/HTML/cadastroCuidador.html
@@ -31,13 +31,13 @@
                     <label for="sexoFeme">Femenino</label>
                     <input type="radio" id="sexoMascu" name="sexo" value="masculino">
                     <label for="sexoMascu">Masculino</label>
-                    <input type="radio" id="sexoTransg" name="sexo2" value="transgenero">
+                    <input type="radio" id="sexoTransg" name="sexo" value="transgenero">
                     <label for="sexoTransg">Transgênero</label>
-                    <input type="radio" id="sexoNeutro" name="sexo3" value="gêneroNeutro">
+                    <input type="radio" id="sexoNeutro" name="sexo" value="gêneroNeutro">
                     <label for="sexoNeutro">Gênero Neutro</label>
-                    <input type="radio" id="sexoNBinario" name="sexo4" value="naobinario">
+                    <input type="radio" id="sexoNBinario" name="sexo" value="naobinario">
                     <label for="sexoNBinario">Não-Binario</label>
-                    <input type="radio" id="sexoAGenero" name="sexo4" value="agenero">
+                    <input type="radio" id="sexoAGenero" name="sexo" value="agenero">
                     <label for="sexoAGenero">Agênero</label><br><br>
 
                     <label for="estadoCuidador">Estado:</label>
