--- a/HTML/controlePeso.html
+++ b/HTML/controlePeso.html
@@ -12,15 +12,15 @@
         <di>
             <fieldset>
                 <legend>Dados antropométricos</legend>
-                <table>
+                <table width="50%">
                     <thead>
                         <tr>
                             <td></td>
-                            <th>20<input type="number"></th></th>
-                            <th>20<input type="number"></th></th>
-                            <th>20<input type="number"></th></th>
-                            <th>20<input type="number"></th></th>
-                            <th>20<input type="number"></th></th>
+                            <th>20<input type="number" class="inpuAno"></th></th>
+                            <th>20<input type="number" class="inpuAno"></th></th>
+                            <th>20<input type="number" class="inpuAno"></th></th>
+                            <th>20<input type="number" class="inpuAno"></th></th>
+                            <th>20<input type="number" class="inpuAno"></th></th>
                         </tr>
                     </thead>
 
@@ -72,14 +72,14 @@
         <div>
             <fieldset>
                 <legend>Controle de Peso</legend>
-                <table width="85%">
+                <table width="50%">
                     <thead>
                         <tr>
                             <td><strong>Controle de perda de peso</strong></td>
-                            <th colspan="2" class="inpuAno">20<input type="number"></th>
-                            <th colspan="2" class="inpuAno">20<input type="number"></th>
-                            <th colspan="2" class="inpuAno">20<input type="number"></th>
-                            <th colspan="2" class="inpuAno">20<input type="number"></th>
+                            <th colspan="2">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2">20<input type="number" class="inpuAno"></th>
                         </tr>
                         <tr>
                             <td></td>
