--- a/HTML/dorCronica.html
+++ b/HTML/dorCronica.html
@@ -4,9 +4,7 @@
         <title>Identificação de Dor Crõnica</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../CSS/estiloPeso.css"></link>
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Battambang&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../CSS/estilodor.css"></link>
     </head>
 
     <body>
