--- a/HTML/controlePeso.html
+++ b/HTML/controlePeso.html
@@ -10,7 +10,7 @@
     <body>
 
         <di>
-            <fieldset>
+            <fieldset class="fielum">
                 <legend>Dados antropométricos</legend>
                 <table width="50%">
                     <thead>
@@ -70,16 +70,16 @@
         </di>
 
         <div>
-            <fieldset>
+            <fieldset class="fielum">
                 <legend>Controle de Peso</legend>
-                <table width="50%">
+                <table width="90%">
                     <thead>
                         <tr>
                             <td><strong>Controle de perda de peso</strong></td>
-                            <th colspan="2">20<input type="number" class="inpuAno"></th>
-                            <th colspan="2">20<input type="number" class="inpuAno"></th>
-                            <th colspan="2">20<input type="number" class="inpuAno"></th>
-                            <th colspan="2">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2" class="pesoSize">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2" class="pesoSize">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2" class="pesoSize">20<input type="number" class="inpuAno"></th>
+                            <th colspan="2" class="pesoSize">20<input type="number" class="inpuAno"></th>
                         </tr>
                         <tr>
                             <td></td>
@@ -109,36 +109,38 @@
                 </table>
                 <img src="../fotos/controlPeso.PNG">
             </fieldset>
+        </div><br>
+        <div id="tabela"><br>
+            <table id="IMC">
+                <thead>
+                    <tr>
+                        <th>Índice antropométrico</th>
+                        <th>Pontos de corte</th>
+                        <th>Classificação do estado nutricional</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th rowspan="4">IMC</th>
+                    </tr>
+                    <tr>
+                        <td> < 22kg/m² </td>
+                        <td>Baixo Peso</td>
+                    </tr>
+                    <tr>
+                        <td> > 22 e < 22kg/m²</td>
+                        <td>Peso adequado</td>
+                    </tr>
+                    <tr>
+                        <td> > 27kg/m²</td>
+                        <td>Sobrepeso</td>
+                    </tr>
+                </tbody>
+            </table>
+    
+            <p><strong>*</strong>Perda de peso não intencional é aquele emagrecimento que não aconteceu por decisão<br>
+            própria. Caso isso ocorra, deve-se investigar as possíveis causas</p>
         </div>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Índice antropométrico</th>
-                    <th>Pontos de corte</th>
-                    <th>Classificação do estado nutricional</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th rowspan="4">IMC</th>
-                </tr>
-                <tr>
-                    <td> < 22kg/m² </td>
-                    <td>Baixo Peso</td>
-                </tr>
-                <tr>
-                    <td> > 22 e < 22kg/m²</td>
-                    <td>Peso adequado</td>
-                </tr>
-                <tr>
-                    <td> > 27kg/m²</td>
-                    <td>Sobrepeso</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <p><strong>*</strong>Perda de peso não intencional é aquele emagrecimento que não aconteceu por decisão<br>
-        própria. Caso isso ocorra, deve-se investigar as possíveis causas</p>
+        
     </body>
 </html>
