--- a/HTML/habitosVida.html
+++ b/HTML/habitosVida.html
@@ -18,10 +18,10 @@
                 <tr>
                     <td colspan="2" rowspan="2"><strong>Identificação de hábitos de vida</strong></td>
                     
-                    <th colspan="2" class="inpuAno">20<input type="number"></th>
-                    <th colspan="2" class="inpuAno">20<input type="number"></th>
-                    <th colspan="2" class="inpuAno">20<input type="number"></th>
-                    <th colspan="2" class="inpuAno">20<input type="number"></th>
+                    <th colspan="2">20<input type="number" class="inpuAno"></th>
+                    <th colspan="2">20<input type="number" class="inpuAno"></th>
+                    <th colspan="2">20<input type="number" class="inpuAno"></th>
+                    <th colspan="2">20<input type="number" class="inpuAno"></th>
                 </tr>
                 <tr>
                     
