--- a/HTML/cadIdoso.html
+++ b/HTML/cadIdoso.html
@@ -61,8 +61,6 @@
                 <label><input type="radio" name="tNacionalidade" value="naturalizada">Naturalizada</label>
                 <label><input type="radio" name="tNacionalidade" value="estrangeira">Estrangeira</label><br>
 
-
-
                 <label>País de Nascimento:</label><br>
                 <input type="text" id="tPais" name="tNovoPais" placeholder="Informe seu País de Nascimento"><br>
 
@@ -71,38 +69,38 @@
                 <label><input type="radio" name="tLer" value="nao">Não</label><br>
 
                 <label>Escolaridade:</label><br>
-                <label><input type="radio" name="escolaridade" value="nenhuma">Nenhuma</label>
-                <label><input type="radio" name="escolaridade" value="de 1 a 3 anos">De 1 a 3 anos</label>
-                <label><input type="radio" name="escolaridade" value="de 4 a 7 anos">De 4 a 7 anos</label>
-                <label><input type="radio" name="escolaridade" value="8 anos ou mais">8 anos ou mais</label><br>
+                <label><input type="radio" name="tEscolaridade" value="nenhuma">Nenhuma</label>
+                <label><input type="radio" name="tEscolaridade" value="de 1 a 3 anos">De 1 a 3 anos</label>
+                <label><input type="radio" name="tEscolaridade" value="de 4 a 7 anos">De 4 a 7 anos</label>
+                <label><input type="radio" name="tEscolaridade" value="8 anos ou mais">8 anos ou mais</label><br>
 
                 <label>Raça/cor:</label><br>
-                <label><input type="radio" name="raça/cor" value="branca">Branca</label>
-                <label><input type="radio" name="raça/cor" value="preta">Preta</label>
-                <label><input type="radio" name="raça/cor" value="parda">Parda</label>
-                <label><input type="radio" name="raça/cor" value="amarela">Amarela</label>
-                <label><input type="radio" name="raça/cor" value="não declarada">Não declarada</label>
-                <label><input type="radio" name="raça/cor" value="indigena">Indigena</label>
-                <label><input type="radio" name="raça/cor" value="nenhuma">Nenhuma</label><br>
+                <label><input type="radio" name="tRaça/cor" value="branca">Branca</label>
+                <label><input type="radio" name="tRaça/cor" value="preta">Preta</label>
+                <label><input type="radio" name="tRaça/cor" value="parda">Parda</label>
+                <label><input type="radio" name="tRaça/cor" value="amarela">Amarela</label>
+                <label><input type="radio" name="tRaça/cor" value="não declarada">Não declarada</label>
+                <label><input type="radio" name="tRaça/cor" value="indigena">Indigena</label>
+                <label><input type="radio" name="tRaça/cor" value="nenhuma">Nenhuma</label><br>
                 <label>Etnia:</label>
                 <input type="text" id="tEtnia" name="tNovaEtnia" placeholder="Informe sua etnia"><br>
 
                 <label>Tem religião?</label><br>
-                <label><input type="radio" name="religião" value="sim">Sim</label>
+                <label><input type="radio" name="tReligiao" value="sim">Sim</label>
                 <input type="text" id="tReligiao" name="tNovaReligiao" placeholder="Informe sua religião">
-                <label><input type="radio" name="religião" value="nao">Não</label><br>
+                <label><input type="radio" name="tReligiao" value="nao">Não</label><br>
             </fieldset><br>         
             <fieldset>
                 <legend>Profissão</legend>
                 <label>Ocupação/Profissão Principal:</label><br>
                 <input type="text" id="tProfissao" name="tNovaProfissao" placeholder="Informe sua profissão"><br>
                 <label>Situação Conjugal:</label> <br>
-                <label><input type="radio" name="conjugue" value="solteiro">Solteiro(a)</label>
-                <label><input type="radio" name="conjugue" value="casado">Casado(a)/Convívio com parceiro(a)</label><br>
-                <label><input type="radio" name="conjugue" value="divorciado">Divorciado(a)/Separado(a)</label>
-                <label><input type="radio" name="conjugue" value="viuvo">Viúvo(a)</label>
+                <label><input type="radio" name="tConjugue" value="solteiro">Solteiro(a)</label>
+                <label><input type="radio" name="tConjugue" value="casado">Casado(a)/Convívio com parceiro(a)</label><br>
+                <label><input type="radio" name="tConjugue" value="divorciado">Divorciado(a)/Separado(a)</label>
+                <label><input type="radio" name="tConjugue" value="viuvo">Viúvo(a)</label>
                 <input type="text" id="tViuvo" name="tNovaViuvo" placeholder="Desde quando (ano)?"><br>
-                <label><input type="radio" name="conjugue" value="outra">Outra</label><br>
+                <label><input type="radio" name="tConjugue" value="outra">Outra</label><br>
                 <label>Unidade básica de saúde que frequenta:</label><br>
                 <input type="text" id="tUnidadeSaude" name="tNovaUnidadeSaude"
                     placeholder="Informe a sua unidade de saude de costume"><br>
